Fixed jump to top of page and changed font sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,8 +78,8 @@
   }
 
   h2  { font-size: 1.6rem; font-weight: 600; }
-  h3  { font-size: 1.25rem; font-weight: 500; letter-spacing: .02rem; }
-  h4  { font-size: 1.15rem;  font-weight: 500;  }
+  h3  { font-size: 1.4rem; font-weight: 500; letter-spacing: .02rem; }
+  h4  { font-size: 1.2rem;  font-weight: 500;  }
   h5  { font-size: 1rem;  font-weight: 500;    }
   p   { font-size: 1rem;     }
 
